--- a/Week2/server/public/css/style.css
+++ b/Week2/server/public/css/style.css
@@ -27,6 +27,12 @@ h1, h2, h3, h4, h5, h6 {
 a {
   text-decoration: none; }
 
+@supports not (display: grid) {
+  .team-container {
+    display: inline-block; } }
+@supports not (display: flex) {
+  .addButton, .selection-container, .halftime-notification, .notification, .goal, .notification-live, .select-team, .show {
+    display: inline-block; } }
 .add-button {
   color: #fff;
   text-decoration: none;
@@ -37,6 +43,8 @@ a {
   cursor: pointer;
   transition: .3s; }
   .add-button:hover {
+    background-color: #B55E4D; }
+  .add-button:active {
     background-color: #B55E4D; }
   .add-button img {
     width: 10px;
@@ -59,7 +67,12 @@ a {
   border: none;
   border-radius: none;
   padding: 1em 3em;
-  margin-top: 1em; }
+  margin-top: 1em;
+  transition: 300ms; }
+  .button:hover {
+    background-color: #844836; }
+  .button:active {
+    background-color: #B55E4D; }
 
 .selection-container {
   width: 100%;
@@ -70,7 +83,7 @@ a {
 
 .team-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-column-gap: 1em;
   grid-row-gap: 1em; }
   .team-container__card {
@@ -85,21 +98,9 @@ a {
   .team-container__logo {
     max-width: 200px;
     width: 100%;
+    max-height: 200px;
+    height: 100%;
     border-radius: 100%; }
-  .team-container__notification {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50px;
-    padding: 1em;
-    background-color: #141516;
-    transition: .4s; }
-    .team-container__notification:hover {
-      background-color: #F7BD2B; }
-    .team-container__notification:active {
-      background-color: #F7BD2B; }
-    .team-container__notification:focus {
-      background-color: #F7BD2B; }
 
 .halftime-notification {
   position: fixed;
@@ -164,9 +165,28 @@ a {
   .notification-live__timer {
     margin-left: 1em; }
 
+.select-team {
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
 @media (min-width: 1025px) and (max-width: 1900px) {
   .team-container {
-    grid-template-columns: 1fr 1fr 1fr 1fr; } }
+    grid-template-columns: 1fr 1fr 1fr 1fr; }
+    .team-container__logo {
+      max-width: 200px;
+      width: 100%;
+      max-height: 200px;
+      height: 100%; }
+
+  .select-team {
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; } }
 .show {
   display: flex; }
 
