--- a/Week2/server/public/css/style.scss
+++ b/Week2/server/public/css/style.scss
@@ -4,11 +4,6 @@ body {
   background-color: #27282C;
 }
 
-:root {
-  $orange: #C64627;
-
-}
-
 header {
   background-color: #303339;
   padding: .5em 1em;
@@ -39,6 +34,19 @@ a {
   text-decoration: none;
 }
 
+@supports not (display: grid) {
+  .team-container {
+    display: inline-block;
+  }
+}
+
+@supports not (display: flex) {
+  .addButton, .selection-container, .halftime-notification, .notification, .goal, .notification-live, .select-team, .show{
+    display: inline-block;
+  }
+}
+
+
 .add-button {
   color: #fff;
   text-decoration: none;
@@ -50,6 +58,10 @@ a {
   transition: .3s;
 
   &:hover {
+    background-color: #B55E4D;
+  }
+
+  &:active {
     background-color: #B55E4D;
   }
 
@@ -80,6 +92,15 @@ a {
   border-radius: none;
   padding: 1em 3em;
   margin-top: 1em;
+  transition: 300ms;
+
+  &:hover {
+    background-color: #844836;
+  }
+
+  &:active {
+    background-color: #B55E4D;
+  }
 }
 
 .selection-container {
@@ -91,9 +112,8 @@ a {
 }
 
 .team-container {
-
   display: grid;
-  grid-template-columns: 1fr 1fr ;
+  grid-template-columns: 1fr ;
   grid-column-gap: 1em;
   grid-row-gap: 1em;
 
@@ -111,29 +131,9 @@ a {
   &__logo {
     max-width: 200px;
     width: 100%;
+    max-height: 200px;
+    height: 100%;
     border-radius: 100%;
-  }
-
-  &__notification {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50px;
-    padding: 1em;
-    background-color: #141516;
-    transition: .4s;
-
-    &:hover {
-      background-color: #F7BD2B;
-    }
-
-    &:active {
-      background-color: #F7BD2B;
-    }
-
-    &:focus {
-      background-color: #F7BD2B;
-    }
   }
 }
 
@@ -160,7 +160,6 @@ a {
     padding: 1.5em;
   }
 }
-
 
 .notification {
   position: fixed;
@@ -216,15 +215,36 @@ a {
   &__timer {
     margin-left: 1em;
   }
-
 }
+.select-team {
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 @media (min-width: 1025px) and (max-width: 1900px) {
 
   .team-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+
+    &__logo {
+      max-width: 200px;
+      width: 100%;
+      max-height: 200px;
+      height: 100%;
+    }
   }
 
+  .select-team {
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .show {
