--- a/Week2/server/views/teampage.hbs
+++ b/Week2/server/views/teampage.hbs
@@ -1,4 +1,5 @@
 <section class="detail-container">
   <h1>Detailpagina</h1>
+    <button class="button" type="button" value="Back" onclick="window.history.back()">Go back</button>
 
 </section>
