added to do list and added audits

--- a/Week2/server/views/layouts/layout.hbs
+++ b/Week2/server/views/layouts/layout.hbs
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Add your favorite club to the dashboard and receive notifications when they’re playing.">
+    <title>My club - Your soccer notification app</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <noscript>
       <meta http-equiv="refresh" content="10">
