--- a/Week2/server/views/dashboard.hbs
+++ b/Week2/server/views/dashboard.hbs
@@ -1,4 +1,4 @@
-<article class="notification-live {{ matchStart }}">
+<article class="notification-live {{ matchStart }}" id="notification-live">
   <small class="notification-live__tag">Now playing</small>
   <p>{{ yourTeam.name }} 0 - 0 {{ oponentTeam.name }}</p>
   <p class="notification-live__timer"> {{ timer }}</p>
@@ -6,7 +6,7 @@
 
 <h1 class="dashboard-title">Dashboard</h1>
 
-<article class="notification ">
+<article class="notification " id="notification ">
   <img src="../img/goal.svg" alt="">
   <div class="notification__info">
     <h2>Goal! </h2>
@@ -15,7 +15,7 @@
   </div>
 </article>
 
-<article class="halftime-notification ">
+<article class="halftime-notification" id="halftime-notification">
   <img src="../img/start.svg" alt="">
   <div class="notification__info">
     <h2>HALF-TIME!</h2>
