--- a/server/views/layouts/layout.hbs
+++ b/server/views/layouts/layout.hbs
@@ -6,9 +6,9 @@
     <meta name="description" content="Add your favorite club to the dashboard and receive notifications when they’re playing.">
     <title>My club - Your soccer notification app</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <noscript>
+    <!-- <noscript>
       <meta http-equiv="refresh" content="10">
-    </noscript>
+    </noscript> -->
   </head>
   <body>
     <header>
@@ -18,6 +18,10 @@
 
     <main class="content-container">
         {{{ body }}}
+        <form class="showrefresh" id="refresh" action="/dashboard" method="post">
+            <label for="">Javascript is disabled</label>
+            <button type="submit" name="button">refresh</button>
+        </form>
     </main>
   </body>
 
